syntax = "proto3";

option go_package = "github.com/Montheankul-K/game-microservices";

message PlayerProfile {
  string id = 1;
  string email = 2;
  string username = 3;
  int32 roleCode = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message CredentialSearchReq {
  string email = 1;
  string password = 2;
}

message FindOnePlayerProfileToRefreshReq {
  string playerId = 1;
}

message GetPlayerSavingAccountReq {
  string playerId = 1;
}

message GetPlayerSavingAccountRes {
  string playerId = 1;
  double balance = 2;
}

service PlayerGrpcService {
  rpc CredentialSearch(CredentialSearchReq) returns (PlayerProfile);
  rpc FindOnePlayerProfileToRefresh (FindOnePlayerProfileToRefreshReq) returns (PlayerProfile);
  rpc GetPlayerSavingAccount(GetPlayerSavingAccountReq) returns (GetPlayerSavingAccountRes);
}